--- a/.github/workflows/static.yml
+++ b/.github/workflows/static.yml
@@ -22,10 +22,10 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-      - name: Checkout
+      - name: Checkout repository
         uses: actions/checkout@v4
 
-      - name: Setup Node
+      - name: Setup Node.js
         uses: actions/setup-node@v4
         with:
           node-version: 18
@@ -33,15 +33,12 @@ jobs:
       - name: Install dependencies
         run: npm install
 
-      - name: Build
-        run: |
-          echo "Generating Vite build..."
-          npm run build
+      - name: Build Vite project
+        run: npm run build
 
       - name: Upload artifact
         uses: actions/upload-pages-artifact@v3
         with:
-          # The Vite build output folder
           path: ./dist
 
       - name: Deploy to GitHub Pages
